--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,9 @@ name = "sheet_excavator"
 crate-type = ["cdylib"]
 
 [dependencies]
+anyhow = "1.0.81"
+calamine = "0.24.0"
+futures = "0.3.30"
 pyo3 = "0.20.0"
+serde_json = "1.0.115"
+tokio = {version = "1.37.0", features = ["full"] }
