--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sheet_excavator"
-version = "0.1.7"
+version = "0.1.8"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -13,5 +13,6 @@ anyhow = "1.0.81"
 calamine = "0.24.0"
 futures = "0.3.30"
 pyo3 = "0.20.0"
+pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
 serde_json = "1.0.115"
 tokio = {version = "1.37.0", features = ["full"] }
