--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sheet_excavator"
-version = "0.1.13"
+version = "0.1.14"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 anyhow = "1.0.81"
 calamine = "0.24.0"
+chrono = "0.4.38"
 futures = "0.3.30"
 pyo3 = "0.20.0"
 serde_json = "1.0.115"
