--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "sheet_excavator"
-version = "0.1.31"
+version = "0.1.32"
 edition = "2021"
+authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]
+description = "A fast Rust-powered tool for extracting data from Excel forms into JSON."
+readme = "README.md"
+repository = "https://github.com/kkollsga/sheet_excavator"
+license = "MIT"
+keywords = ["excel", "data-extraction", "json", "spreadsheet", "pandas"]
+categories = ["data-processing", "parsing", "excel"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
